--- a/Prototype.html
+++ b/Prototype.html
@@ -14,6 +14,17 @@
 
         console.info(eko);
         console.log(fiqri);
+
+        // menambah property ke instance Object
+        const al = new People("Al", "Fajri");
+
+        //Ini hanya untuk instance Object AL
+        al.sayBye = function(){
+            console.log("Good Bye")
+        }
+
+        // Menambahkan Property ke Prototype
+         
     </script>
 </body>
 </html>
