--- a/Method di constructor-function.html
+++ b/Method di constructor-function.html
@@ -12,7 +12,8 @@
             this.firstName = ""
             this.lastName = ""
             this.sayHello = function (name) {
-                console.info(`Hello ${name}, my name is ${this.firstName} ${this.lastName} `)
+                console.info(`Hello ${name}, my name is ${this.firstName} 
+                ${this.lastName} `)
             }
         }
     </script>
