--- a/constructor-function.html
+++ b/constructor-function.html
@@ -9,16 +9,16 @@
 <body>
     <script>
 
-        //Membuat Object dgn Object
-        const fiqri = {
-            firstName: "Fiqri",
-            lastName: "Firdaus"
-        };
+        // //Membuat Object dgn Object
+        // const fiqri = {
+        //     firstName: "Fiqri",
+        //     lastName: "Firdaus"
+        // };
 
-        const budi = {
-            firstName1: "Budi",
-            lastName1: "Setiawan"
-        };
+        // const budi = {
+        //     firstName1: "Budi",
+        //     lastName1: "Setiawan"
+        // };
 
         //Constructor Function
         function Person(){
