--- a/Parameter-di-CF.html
+++ b/Parameter-di-CF.html
@@ -15,6 +15,19 @@
                 console.info(`Hello ${name}, my name is ${this.firstName}`)
             }
         }
+
+        const gagah = new Person();
+        gagah.firstName = "Bibi";
+        gagah.lastName = "Kalo";
+        gagah.sayHello("Haru");
+
+        const galu = new Person();
+        galu.firstName = "Jaka";
+        galu.lastName = "Jalu";
+        galu.sayHello("Haru");
+
+        console.log(gagah)
+        console.log(galu)
     </script>
 </body>
 </html>
