--- a/property di constructor function.html
+++ b/property di constructor function.html
@@ -8,13 +8,28 @@
 </head>
 <body>
     <script>
+
         function Person(){
-            this.firstName = ""
-            this.lastName = ""
-        };
+            this.firstName = "";
+            this.lastName = "";
+            //Method di Constructor Function
+            this.sayHello = function (name) {
+                console.info(`Hello ${name}, my name is ${this.firstName}`);
+            }
+        }
 
         const gagah = new Person();
+        gagah.firstName = "Bibi";
+        gagah.lastName = "Kalo";
+        gagah.sayHello("Haru");
+
         const galu = new Person();
+        galu.firstName = "Jaka";
+        galu.lastName = "Jalu";
+        galu.sayHello("Haru");
+
+        console.log(gagah)
+        console.log(galu)
     </script>
 </body>
 </html>
